<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yuuuzzzin.offoff_android.viewmodel.BoardListViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/boardsFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.ui.board.BoardsFragment">

            <ImageView
                android:id="@+id/iv_background"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/background_post"
                android:src="@drawable/layout_background_radius_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="32dp">

                <ImageButton
                    android:id="@+id/bt_more_option"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="66dp"
                    android:background="@drawable/ic_more_option"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:padding="0dp"
                    android:text="@string/hi"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_more_option" />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_offoff"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_hi"
                    app:layout_goneMarginTop="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_message"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/layout_button_post_write"
                    android:includeFontPadding="false"
                    android:text="@string/message"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_more_option" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_scrap"
                    android:layout_width="48dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/layout_button_post_write"
                    android:includeFontPadding="false"
                    android:text="@string/scrap"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_message" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="240dp"
                    android:background="@drawable/layout_edit_text"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="12dp"
                    android:drawableTint="@color/green"
                    android:hint="전체 게시판 검색 키워드를 입력해주세요."
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white4"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor,RtlSymmetry"
                    tools:targetApi="m" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_favorite_boards"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    android:background="@drawable/layout_favorites_list"
                    android:paddingHorizontal="12dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="22dp"
                    app:layout_constraintTop_toBottomOf="@id/et_search">

                    <TextView
                        android:id="@+id/tv_favorite_board"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="11dp"
                        android:text="@string/board_favorite"
                        android:textColor="@color/white5"
                        android:textSize="14dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_boards_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="11dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_favorite_board"
                        tools:listitem="@layout/rv_item_board" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_boards"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginStart="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/layout_favorite_boards"
                    app:layout_constraintTop_toBottomOf="@id/layout_favorite_boards"
                    tools:listitem="@layout/rv_item_board" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>