<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.yuuuzzzin.offoff_android.viewmodel.SignupViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ui.member.SignupStep1Fragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/layout_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appbar"
                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:title="@string/signup_step1"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_pattern"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:helperTextTextColor="@color/design_default_color_error"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline2"
                app:startIconDrawable="@drawable/ic_round_person_24"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:text="@={viewModel.id}"
                    onFocusChange="@{viewModel.idFocusChange}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_pw"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/pw_pattern"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:helperTextTextColor="@color/design_default_color_error"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tf_id"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:text="@={viewModel.pw}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_pw_confirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/check_pw"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_baseline_error_24"
                app:helperTextTextColor="@color/design_default_color_error"
                app:hintTextColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tf_pw"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pw_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.pwConfirm}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_next"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                android:text="@string/next"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="350dp"
                app:layout_constraintGuide_percent="0.55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>