<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yuuuzzzin.offoff_android.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        tools:context=".view.ui.member.SignupActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_offoff_144"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2"
            app:startIconDrawable="@drawable/ic_round_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.id}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_pw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pw"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_id"
            app:startIconDrawable="@drawable/ic_outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.pw}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_check_pw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_pw"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_baseline_error_24"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_pw"
            app:startIconDrawable="@drawable/ic_outline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_check_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.checkPw}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/signup"
            android:textStyle="bold"
            android:onClick="@{()-> viewModel.signup()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>